<resources>
    <string name="app_name">Kickoff</string>
    <string name="standing">Standing</string>
    <string name="table_standing">Table Standings</string>
    <string name="see_all">See All</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="points">Points</string>
    <string name="goals_scored">Goals Scored</string>
    <string name="player_name">Player Name</string>
    <string name="goals">Goals</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">country</string>
    <string name="rounds">Rounds</string>
    <string name="teams">Teams</string>
    <string name="founded_in">%1$i, %2$s</string>
    <string name="capacity">%1$s (Capacity : %2$i)</string>
    <string name="Club">Club</string>
    <string name="league_loge">League loge</string>
    <string name="p">P</string>
    <string name="search_here">Search here...</string>

</resources>